@@ -23,7 +23,7 @@
  * Authors: the Amanda Development Team.  Its members are listed in a
  * file named AUTHORS, in the root directory of this distribution.
  */
-/* $Id: taper.c,v 1.144.2.8 2007/02/15 12:39:21 martinea Exp $
+/* $Id: taper.c,v 1.144.2.9 2007/02/20 22:41:49 martinea Exp $
  *
  * moves files from holding disk to tape, or from a socket to tape
  */
@@ -2047,8 +2047,8 @@ predict_splits(
 	return(0);
 
     if (adj_splitsize <= (off_t)0) {
-      error("Split size must be > " OFF_T_FMT "k",
-      	(OFF_T_FMT_TYPE)(DISK_BLOCK_BYTES/1024));
+	error("Split size must be > " OFF_T_FMT "k",
+	      (OFF_T_FMT_TYPE)(DISK_BLOCK_BYTES/1024));
       /*NOTREACHED*/
     }
 
@@ -2059,11 +2059,12 @@ predict_splits(
     total_kb = size_holding_files(filename, 1);
     
     if (total_kb <= (off_t)0) {
-      fprintf(stderr, "taper: r: " OFF_T_FMT
-      		" kb holding file makes no sense, not precalculating splits\n",
+	fprintf(stderr, "taper: r: " OFF_T_FMT
+      		" kb holding file makes no sense, setting splitsize to 0\n",
 		(OFF_T_FMT_TYPE)total_kb);
-      fflush(stderr);
-      return(0);
+	fflush(stderr);
+	splitsize = 0;	/* disabling split */
+	return(0);
     }
 
     fprintf(stderr, "taper: r: Total dump size should be " OFF_T_FMT
